@@ -5,8 +5,6 @@ This file is generated! See scripts/docs_collector.py
 [[metricbeat-metricset-kafka-partition]]
 === Kafka partition metricset
 
-beta[]
-
 include::../../../module/kafka/partition/_meta/docs.asciidoc[]
 
 
