@@ -3,7 +3,7 @@
   description: >
     Kafka module
   short_config: false
-  release: beta
+  release: ga
   fields:
     - name: kafka
       type: group
