@@ -2,7 +2,7 @@
   type: group
   description: >
     consumergroup
-  release: beta
+  release: ga
   fields:
     - name: broker
       type: group
